[package]
name = "yew-app-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.2" # fetch call
serde = { version = "1.0", features = ["derive"]} # JSONをde-serialize
wasm-bindgen-futures = "0.4" # Rust FutureをPromiseとして実行
yew = "0.19"